--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 Google Gmail Cred/client_secret_296464071089-7t8ua1nee1ft06ffd8faifcj1k29c1d9.apps.googleusercontent.com.json
 Google Firebase Cred/jobify-ai-backend-firebase-adminsdk-z7hzi-87d9600e04.json
 token.pickle
+Actual Test/main.py
+Actual Test/test.py
