--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ Google Firebase Cred/jobify-ai-backend-firebase-adminsdk-z7hzi-87d9600e04.json
 token.pickle
 Actual Test/main.py
 Actual Test/test.py
+Test/count.py
