--- a/jobify_ai_app/pubspec.yaml
+++ b/jobify_ai_app/pubspec.yaml
@@ -33,5 +33,6 @@ flutter:
   uses-material-design: true
 
   assets:
-    - assets/logo.png  # Path to your logo image
+    - assets/logo.png  # Path to your logo image 
+    - assets/logo1.png
 
